fixed text wrap bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -219,12 +219,13 @@
   display: flex;
   width: 1052px;
   height: 595px;
+  margin: 0 24px 0 24px;
 }
 
 /* Логотип */
 .logo-white-space {
   display: flex;
-  margin: 35px 72px 0 71px;
+  margin: 35px 72px 0 47px;
   height: 240px;
   border-radius: 50%;
   background-color: black;
@@ -245,11 +246,16 @@
 }
 
 .about-auction-inforamtion-headline {
+  margin-top: 3px;
   margin-bottom: 100px;
-  width: 100%;
   font-size: 40px;
-  text-wrap: nowrap;
   text-transform: uppercase;
+}
+
+.about-paragraphs {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
 
 .first-paragraph {
@@ -258,7 +264,6 @@
   font-weight: 400;
   line-height: 24px;
   text-align: left;
-  margin-bottom: 25px;
 }
 
 
